refactor: reason is Android does not support java version > 11